Fix social icons on small screen

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,14 @@
 	left: 0;
 	width: 100%;
 	height: $footer-height;
+
+	.columns {
+		width: 48%;
+		margin-left: 4%;
+		&:first-child {
+			margin-left: 0;
+		}
+	}
 }
 
 $footer-height: 40px;
@@ -15,7 +23,6 @@ $footer-height: 40px;
 	font-family: $title-font-family;
 	line-height: $footer-height;
 	color: #999;
-	padding-left: 1rem;
 	font-size: 1.4rem;
 }
 
